...
    
    @IBOutlet var questions: [UISegmentedControl]!
    
    @IBAction func onFinishPress(sender: AnyObject) {
        // confirm
        let controller = UIAlertController(
            title: "Are you sure?",
            message: "Once finished, you cannot change your answers.",
            preferredStyle: .ActionSheet)
        
        let yesAction = UIAlertAction(
            title: "Yes",
            style: .Default,
            handler: { action in
                // then save answers
                
                
                // start timer
...
