...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="fWs-dw-xkf">
                                <rect key="frame" x="20" y="413" width="560" height="65"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="top" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dGx-5A-Xwu" userLabel="AddVoiceButton">
                                        <rect key="frame" x="0.0" y="0.0" width="180" height="65"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="65" id="2bL-Ji-mWf"/>
                                        </constraints>
...
                                        <rect key="frame" x="0.0" y="207" width="560" height="206"/>
                                        <subviews>
                                            <segmentedControl opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="Mer-OE-1HC">
                                                <rect key="frame" x="8" y="89" width="544" height="29"/>
                                                <segments>
                                                    <segment title="Boy"/>
                                                    <segment title="Girl"/>
                                                </segments>
                                                <connections>
                                                    <action selector="onGenderSegmentChanged:" destination="KBN-8C-xNN" eventType="valueChanged" id="LUd-Y0-JxN"/>
                                                </connections>
                                            </segmentedControl>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I am a" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lwI-hM-qFL" userLabel="GenderQuestion">
...
